# Bot-plusomet

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: server.yml
bot/: .env.example  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
bot/config/: __init__.py  bot_config.py  log_config.py
bot/handlers/: __init__.py  moderation.py
bot/middlewares/: msg_producer_middleware.py
bot/services/: __init__.py  post_moderation.py  reactions.py
producer_consumer/messages/: __init__.py  base.py  redis_pc.py
producer_consumer/moderation_results/: __init__.py  base.py  redis_pc.py
schemas/: __init__.py
server/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  celery_app.py  main.py  pyproject.toml
server/config/: app_config.py  log_config.py
server/routes/: __init__.py  moderation_route.py
server/schemas/: __init__.py  messages.py  moderation_schemas.py
server/services/: excs.py  moderation.py  prompts.py
server/services/api/: __init__.py
server/services/api/llm/: __init__.py  base.py  yandex_gpt.py
server/services/moderators/: __init__.py  base.py  llm_moderator.py
server/tasks/: __init__.py  moderation_tasks.py
server/tests/: __init__.py  conftest.py
server/tests/test_services/test_api/: __init__.py  test_yandex_gpt.py
server/tests/test_services/test_moderators/: __init__.py  test_llm_moderator.py
