[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.1",
    "flake8-docstrings>=1.7.0",
    "flake8-eradicate>=1.5.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
]
