[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
In    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.1",
    "flake8-docstrings>=1.7.0",
    "flake8-eradicate>=1.5.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "types-requests>=2.32.0.20241016",
]

[tool.black]
line-length = 88
force-exclude = '''
/(
    \.venv
)
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip_glob = [
    "**/.venv/*"
]

[tool.mypy]
exclude = [
    ".venv",
]
ignore_missing_imports = true
